--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -86,11 +86,11 @@ cta:
     background-position: 
     overlay_style: dark
 seo: 
-  title: This is for Women Who Feel Masterclass
-  description: This is for Women who Feel…
+  title: Pathways of Life
+  description: 4-Week Live Online Program
   description: A movement masterclass with Mana Mei, International Women's Embodiment Mentor
   keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
-  social_image: /uploads/images/women-who-feel-1.jpg
+  social_image: /uploads/images/pathways-of-life-1.jpg
   hide-from-google: true
 ---
 <!-- Course Heading -->
@@ -132,7 +132,7 @@ seo:
 
 
 <!-- Course Description -->
-<section class="p-5p m-5p bg-image-style bg-no-repeat bg-contain" style="background-image: url({{ page.course-description.background_image }});">
+<section class="p-5p my-10p mx-5p bg-image-style bg-no-repeat bg-contain" style="background-image: url({{ page.course-description.background_image }});">
   <div class="md:text-center">
       <p>{{page.course-description.description_html}}</p>
   </div>
@@ -141,7 +141,7 @@ seo:
 <!-- Description Continued -->
 <section>
   <!-- 2 Columns -->
-  <div class="grid md:grid-cols-2">
+  <div class="grid md:grid-cols-2 my-10p md:my-0">
 
     <!-- Left Column (image) -->
     <div class="mb-10p md:mb-0 bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}};"></div>
@@ -149,7 +149,7 @@ seo:
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
       <div class="md:py-10p pl-10p pr-10p md:pr-[20%]">
-        <h2 class="text-[1.5rem] font-medium uppercase mb-2">{{page.who-its-for.heading_html}}</h2>
+        <h2 class="mb-4">{{page.who-its-for.heading_html}}</h2>
         <div>{{page.who-its-for.description_html}}</div>
       </div>
     </div>
@@ -157,7 +157,7 @@ seo:
 </section>
 
 <!-- Banner with Testimonial -->
-<section class="mt-10p p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/manamei-58.jpg);">
+<section class="mt-20p lg:mt-10p p-10p bg-image-style bg-overlay medium flex items-center justify-center py-20p lg:py-10p px-10p" style="background-image: url(/uploads/images/manamei-58.jpg);">
   <div class="lg:w-[80%] text-center italic">
     ​​“Such a profoundly moving experience…the way this practice combined the embodied experience with the verbal, analytical awareness added such richness. Weaving in the awareness of the deeper meanings behind the circles, spirals, waves, and torus was incredible—like being given a map to something my body already knew but my mind had yet to name. Bringing the intention and the empowerment front and center made every movement feel even more purposeful, like a conversation between the ancient and the present moment.”
   </div>
@@ -165,7 +165,7 @@ seo:
 
 
 <!-- How It Works -->
-<section class="pt-10p lg:py-10p">
+<section class="pt-10p mt-10p lg:mt-0 lg:py-10p">
 
   <div class="text-center px-5p md:px-10p">
     <div class="lg:w-[70%] mx-auto mb-12">
@@ -238,7 +238,7 @@ seo:
 
 
 <!-- Banner with Testimonial -->
-<section class="mt-10p p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-6.jpg); background-position: 50% 30%;">
+<section class="mt-10p py-20p lg:py-10p px-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-6.jpg); background-position: 50% 30%;">
   <div class="lg:w-[80%] text-center italic">
     ​“I love the theory aspect of this topic so much, and feel I really gained a much deeper understanding of the circles, spirals & waves—and how they can be used as a profound tool for doing shadow integration work. Combining this newfound theory with my familiar Mana Movement practice felt like experiencing a whole new aspect of the practice for the first time. I can’t wait to keep expanding on and exploring this.”
   </div>
@@ -246,8 +246,8 @@ seo:
 
 
 <!-- Included -->
-<section class="p-10p">
-    <h2 class="text-lg-serif text-feature">{{ page.investment.heading }}</h2>
+<section class="p-10p my-10p lg:my-0">
+    <h2 class="text-lg-serif text-feature mb-4">{{ page.investment.heading }}</h2>
       <!-- Includes -->
       <div>
         <ul>
@@ -272,7 +272,7 @@ seo:
 
 
 <!-- Banner with Testimonial -->
-<section class="p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-7.JPG);">
+<section class="py-20p lg:py-10p px-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-7.JPG);">
   <div class="lg:w-[80%] text-center italic">
     <p>“My tears are falling down while I am writing, but this are tears of transformation and happiness. Thank you so much for this experience.”</p>
   </div>
@@ -280,7 +280,7 @@ seo:
 
 
 <!-- Inside the Course -->
-<section class="mt-10p">
+<section class="mt-10p pt-10p lg:pt-0">
 
   <!-- Mobile Image (hidden on desktop) -->
   <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] mt-10p mx-10p lg:hidden" style="background-image: url('{{page.inside-the-course.background-image.background_image}}');"></div>
@@ -306,7 +306,7 @@ seo:
 
 <!-- Testimonials -->
 <section class="testimonial-container bg-image-style bg-overlay mt-10p
-{{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light" style="background-position: 50% 35%;">
+{{ page.testimonials.overlay_style }} bg-[url('{{page.testimonials.background_image}}')] py-20p lg:py-10p px-10p bg-overlay-light" style="background-position: 50% 35%;">
     <div>
       {% for item in page.testimonials.testimonials %}
       <div class="md:px-10p">
