--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -62,29 +62,17 @@ testimonials:
     - testimonial: We think of wings as freedom, but today I felt the quiet liberation of laying them down. Of letting the wind carry away what no longer belongs, like whispers never meant to stay.
     - testimonial: I observed the cyclical, spiraling patterns of nature unfold in real time, mirroring those same movements in my own body, reminding me again that we are all woven into the same field. It is beautiful. It is sacred. And the word “gratitude” feels too small for what I am experiencing—for this practice, for this community—for Mana and Ka…I am consistently in awe of this process.
 cta:
-  heading: Meet Mana Mei, International Feminine Embodiment Mentor
+  heading: Begin the Work That’s Been Calling You
   description_html: >-
-    <p>Mana Mei is professional dancer, international performer, and Global Leader in the Art of Feminine Embodiment. She is the founder of Liberation Through Movement - a lifestyle and personal transformation business that realigns women with their power to step forward as the ultimate creators of their lives through the modality of embodied dance and intentional movement.</p>
-    <p>Mana is also the Founder of Mana Movement- an embodied movement meditation modality that has already supported thousands of women around the world in cultivating harmonious mind-body-spirit connection and cultivating unwavering inner safety and freedom.</p>
-    <p>Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement, Mana has discovered the immense healing power of somatic movement and intentional dance, and is passionate about sharing this wisdom with people all over the world.</p>
-    <p>Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p> 
-    <p>Mana has been mentoring women through pivotal moments of their healing journeys in 1-on-1 and and small group programs, and has supported over 100 women as their personal mentor as they rise into self-empowerment and become the master Creatrix of their lives. Currently, the best way to work with Mana is through her keystone 3-month Liberation Through Movement Mentorship Program.</p>
-  mobile_image: /uploads/images/women-who-feel-6.png
-  ltm-description_html: |
-    <h2 class="text-[1.5rem] font-medium uppercase mb-2">What do women say about the <span class="text-[#fcbe92]">LTM Mentorship Program</span>?...</h2>
-    <p>“I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days weeks and years to come, watching the magic unfold.”</p>
-    <p>“I’m so happy to be part of this journey. It was life changing, it IS LIFE CHANGING…I feel like there is such a new path opening up for me. A path of being TRULY WHO I AM and finding myself and staying true to myself.”</p>
-    <p>“Liberation Through Movement has been by far the best training and gift I’ve given myself to peel away the layers and the programs and the conditionings.”</p>
-    <p>“This was the first step for me in showing up for myself and it has been so powerful. It has changed the way I live my life. I never expected to get as much out of this as I have.”</p>
-    <p>“I’m so happy and so enchanted by this. And I wish every woman would take place in this celebration of Femininity, of sisterhood, of aliveness.”</p>
-    <p>Want to experience a taste of the Liberation Through Movement magic? Join this unique Masterclass experience “This is for Women who Feel…” on July 8th to experience it yourself!</p>
+    <p>If you’ve felt the stirrings... the quiet knowing that something deeper is ready to move through you. This is your invitation.</p>
+    <p>Join us in this guided, supported container and reconnect to the intelligence that already lives within your body.</p>
   button:
     text: Enroll Now
     url: https://manamei.mysamcart.com/checkout/pathways-of-life-program
   background-image:
-    background_image: /uploads/images/manamei-63.jpg
+    background_image: /uploads/images/manamei-27.jpg
     background-position: 
-    overlay_style: dark
+    overlay_style: medium
 seo: 
   title: Pathways of Life
   description: 4-Week Live Online Program
@@ -313,5 +301,58 @@ seo:
         <p class="text-center mt-8 testimonial-item"><em>"{{item.testimonial}}"</em></p>
       </div>
       {% endfor %}
+    </div>
+</section>
+
+
+<!-- Facilitators -->
+<section class="my-10p">
+
+  <!-- Ka -->
+  <div class="lg:grid lg:grid-cols-3">
+    <!-- Left Column -->
+    <div class="col-span-2 px-10p flex justify-center items-center mt-20p lg:mt-0">
+      <div>
+        <h2 class="text-md-serif text-feature">About Ka</h2>
+        <p>Ka is a certified analytical psychologist, yoga teacher, Reiki practitioner, and Mana Movement movement facilitator, and has taught various movement modalities since 2007. Being deeply passionate about human nature, Ka studied psychology, movement and spirituality for two decades. She offers analytical and somatic-oriented psychotherapy as well as guides group immersions. She  weaves a scientific approach with metaphysical practices, finding new ways to heal, transform and integrate.</p>
+      </div>
+    </div>
+
+    <!-- Right Column -->
+    <div class="bg-image-style bg-[url('/uploads/images/pathways-of-life-10.jpg')] aspect-portrait m-10p lg:m-0"></div>
+  </div>
+
+  <!-- Mana -->
+  <div class="lg:grid lg:grid-cols-3">
+    <!-- Left Column -->
+    <div class="hidden lg:block bg-image-style bg-[url('/uploads/images/pathways-of-life-11.JPG')] aspect-portrait"></div>
+
+    <!-- Right Column -->
+    <div class="col-span-2 px-10p flex justify-center items-center mt-20p lg:mt-0">
+      <div>
+        <h2 class="text-md-serif text-feature">About Mana</h2>
+        <p>Mana Mei is professional dancer, performer, and International Leader in the Art of Feminine Embodiment. She is the founder of Liberation Through Movement - a lifestyle and personal transformation business that realigns women with their power to step forward as the ultimate creators of their lives through the modality of embodied dance and intentional movement. She is also the Founder of Mana Movement- an embodied movement meditation modality to support all women in cultivating harmonious mind-body-spirit connection. Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement techniques, Mana has discovered the immense healing power of movement and is passionate about sharing this wisdom with people all over the world. Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p>
+      </div>
+    </div>  
+
+    <!-- Mobile Left Column -->
+    <div class="lg:hidden bg-image-style bg-[url('/uploads/images/pathways-of-life-11.JPG')] aspect-portrait m-10p lg:m-0"></div> 
+
+  </div>
+
+</section>
+
+
+<!-- CTA -->
+<section class="py-20p lg:py-10p px-5p bg-image-style bg-overlay {{page.cta.background-image.overlay_style}}"
+    style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
+    <div class="text-center">
+        <h2 class="text-lg-serif">{{page.cta.heading}}</h2>
+        <div class="md:px-10p">
+            <p>{{page.cta.description_html}}</p>
+        </div>
+    </div>
+    <div class="text-center mt-8">
+        <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
     </div>
 </section>
