dark snake from chatgpt

--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: promo
 slug: pathways-of-life
 title: Pathways of Life
 description: Personal Empowerment through Mind-Body Exploration of Feminine Shapes 
@@ -120,7 +120,7 @@ seo:
 
 
 <!-- Course Description -->
-<section class="p-5p my-10p mx-5p bg-image-style bg-no-repeat bg-contain" style="background-image: url({{ page.course-description.background_image }});">
+<section class="p-5p my-10p mx-5p bg-image-style bg-no-repeat bg-contain bg-overlay dark" style="background-image: url({{ page.course-description.background_image }});">
   <div class="md:text-center">
       <p>{{page.course-description.description_html}}</p>
   </div>
