headings and other whatsapp edits - push live

--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -44,11 +44,12 @@ investment:
       - list-item_html: Weekly “do-at-home” tasks to deepen your experience and support your personal process, including a “daily dose” movement invitation, brochure about the psychology of shape, and a Self-Inquiry Shape Journaling Worksheet.
       - list-item_html: Exclusive Course Community on Telegram to connect with your global sisterhood, seek support and inspiration, offer a space to hold each other in authenticity and vulnerability, and weekly invitations to share reflections and SHAPES studies!
 inside-the-course:
-  heading_html: Inside this Program, you will gain invaluable knowledge and experience life-changing embodiment practices that you can apply to your daily life for the rest of your life.
+  heading_html: Investment
   description_html: >-
+    <p>Inside this Program, you will gain invaluable knowledge and experience life-changing embodiment practices that you can apply to your daily life for the rest of your life.</p>
     <p>The tools shared within this program are timeless and always relevant no matter what phase of your journey you are on.</p>
     <p>Whatever meaningful changes you are desiring in your life, this work will meet you there.</p>
-    <p>The investment to join us in this potent 4-week container, with lifetime access to all course content, where you will be held, guided, and supported every step of the way, is only $160 USD.</p> 
+    <p>The investment to join us in this potent 4-week container, with lifetime access to all course content, where you will be held, guided, and supported every step of the way, is only <span class="text-feature"><strong>$160 USD</strong></span>.</p> 
     <p>Our goal is to make this program accessible and affordable for any woman who feels she can benefit from this work.</p>
     <p>If you need additional financial support, please email manameilin@gmail.com to ask about our Payment Plan option.</p>
   background-image:
@@ -85,8 +86,8 @@ seo:
 <section class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center {{page.heading.overlay_style}} bg-[url('/uploads/images/pathways-of-life-9.jpg')] md:bg-[url('/uploads/images/pathways-of-life-1.jpg')]"
     style="background-position: {{page.heading.image_focus}};">
     <div>
-        <h2 class="heading-lg-sans">{{page.heading.title}}</h2>
-        <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
+        <h1 class="font-pathways lowercase text-[10vw] lg:text-[8vw] leading-[1em] mb-2">{{page.heading.title}}</h1>
+        <h2 class="mb-4">{{page.heading.subtitle}}</h3>
         <p class="uppercase">{{page.heading.description}}</p>
 
         <!-- Enroll Button -->
@@ -137,7 +138,7 @@ seo:
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
       <div class="md:py-10p pl-10p pr-10p md:pr-[20%]">
-        <h2 class="mb-4">{{page.who-its-for.heading_html}}</h2>
+        <h2 class="heading-pathways">{{page.who-its-for.heading_html}}</h2>
         <div>{{page.who-its-for.description_html}}</div>
       </div>
     </div>
@@ -165,21 +166,21 @@ seo:
 
     <!-- Mind -->
     <div>
-      <h3 class="font-serif text-2xl mb-4 text-feature">Mind</h3>
+      <h3 class="heading-pathways-lg text-feature">Mind</h3>
         <p>Theoretical Knowledge on the Origin of the Feminine Pathways and their applicable relationship to our own psyche, delivered during weekly Live Transmissions.</p>
         <p>Mind-provoking “worksheet” tasks geared to create a foundation of understanding of your own personal relationship to and journey with each shape.</p>
     </div>
 
     <!-- Body -->
     <div>
-      <h3 class="font-serif text-2xl mb-4 text-feature">Body</h3>      
+      <h3 class="heading-pathways-lg text-feature">Body</h3>      
       <p>Guided Mana Movement Practices focused on embodying the Feminine Pathways as a way to forge the Mind-Body connection to these shapes in relationship to your personal journey, guided live during weekly transmissions.</p>
       <p>Weekly movement prompts for self exploration of the Feminine Shapes and daily practice to support the deepening of embodied knowledge.</p>
     </div>
 
     <!-- Spirit -->
     <div>
-      <h3 class="font-serif text-2xl mb-4 text-feature">Spirit</h3>
+      <h3 class="heading-pathways-lg text-feature">Spirit</h3>
       <p>Cultivating an unwavering experience of Safety and Freedom through being held in a container of support and non-judgement, focused on authentic expression and shared inspiration.</p>
       <p>Weekly invitations to share your personal journey, seek support and inspiration from other women around the world, and co-create a powerful experience of sisterhood and connection.</p>
     </div>
@@ -208,8 +209,7 @@ seo:
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p flex justify-center items-center">
           <div>
-              <h2 class="mb-4">A deeper look into Mana Movement as a powerful tool for integration...</h2>
-              <p>Each month, you will be invited to devote yourself to your inner work, prioritize YOU and the process of awakening self awareness at all levels.</p>
+              <h2 class="heading-pathways">A deeper look into Mana Movement as a powerful tool for integration...</h2>
               <p>Mana Movement is a powerful embodied movement technique that is founded on the physical and energetic activation of the Feminine Pathways through the entirety of the Body.</p>
               <p>These shapes—Circles, Spirals, Waves—are the fundamental patterns through which the psyche moves. By mirroring them in our physical movement, we gain access to that deeper layer of reality. This embodied engagement allows us to understand better how these patterns operate within us—and, as a result, learn to navigate life with greater awareness and ease.</p>
               <p>Mana Movement works on a pre-verbal level, allowing you to integrate experience without needing to define it. The body already knows what is waiting to be released and reintegrated.</p> 
@@ -235,7 +235,7 @@ seo:
 
 <!-- Included -->
 <section class="p-10p my-10p lg:my-0">
-    <h2 class="text-lg-serif text-feature mb-4">{{ page.investment.heading }}</h2>
+    <h2 class="heading-pathways-lg text-feature">{{ page.investment.heading }}</h2>
       <!-- Includes -->
       <div>
         <ul>
@@ -277,7 +277,7 @@ seo:
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p">
           <div>
-              <h2 class="">{{page.inside-the-course.heading_html}}</h2>
+              <h2 class="heading-pathways-lg text-feature">{{page.inside-the-course.heading_html}}</h2>
               <p>{{page.inside-the-course.description_html}}</p>
           </div>
           <div class="mt-8">
@@ -313,7 +313,7 @@ seo:
     <!-- Left Column -->
     <div class="col-span-2 px-10p flex justify-center items-center mt-20p lg:mt-0">
       <div>
-        <h2 class="text-md-serif text-feature">About Ka</h2>
+        <h2 class="heading-pathways-lg text-feature">About Ka</h2>
         <p>Ka is a certified analytical psychologist, yoga teacher, Reiki practitioner, and Mana Movement movement facilitator, and has taught various movement modalities since 2007. Being deeply passionate about human nature, Ka studied psychology, movement and spirituality for two decades. She offers analytical and somatic-oriented psychotherapy as well as guides group immersions. She  weaves a scientific approach with metaphysical practices, finding new ways to heal, transform and integrate.</p>
       </div>
     </div>
@@ -330,7 +330,7 @@ seo:
     <!-- Right Column -->
     <div class="col-span-2 px-10p flex justify-center items-center mt-20p lg:mt-0">
       <div>
-        <h2 class="text-md-serif text-feature">About Mana</h2>
+        <h2 class="heading-pathways-lg text-feature">About Mana</h2>
         <p>Mana Mei is professional dancer, performer, and International Leader in the Art of Feminine Embodiment. She is the founder of Liberation Through Movement - a lifestyle and personal transformation business that realigns women with their power to step forward as the ultimate creators of their lives through the modality of embodied dance and intentional movement. She is also the Founder of Mana Movement- an embodied movement meditation modality to support all women in cultivating harmonious mind-body-spirit connection. Through her life-long studies of classical dance techniques and over 10 years of exploring non-traditional movement techniques, Mana has discovered the immense healing power of movement and is passionate about sharing this wisdom with people all over the world. Mana believes that our bodies are vessels built to explore all of the complexities of the human experience, and by becoming deeply embodied, we can cultivate unwavering inner safety and freedom, and engage in the world from this place, allows us to live in authentic liberation.</p>
       </div>
     </div>  
@@ -347,7 +347,7 @@ seo:
 <section class="py-20p lg:py-10p px-5p bg-image-style bg-overlay {{page.cta.background-image.overlay_style}}"
     style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
     <div class="text-center">
-        <h2 class="text-lg-serif">{{page.cta.heading}}</h2>
+        <h2 class="heading-pathways-lg">{{page.cta.heading}}</h2>
         <div class="md:px-10p">
             <p>{{page.cta.description_html}}</p>
         </div>
