hide from google: false

--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -80,7 +80,7 @@ seo:
   description: A movement masterclass with Mana Mei, International Women's Embodiment Mentor
   keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
   social_image: /uploads/images/pathways-of-life-1.jpg
-  hide-from-google: true
+  hide-from-google: false
 ---
 <!-- Course Heading -->
 <section class="p-10p bg-image-style bg-overlay min-h-[90vh] flex align-middle items-center text-center justify-center {{page.heading.overlay_style}} bg-[url('/uploads/images/pathways-of-life-9.jpg')] md:bg-[url('/uploads/images/pathways-of-life-1.jpg')]"
