--- a/application-thank-you-retreat.html
+++ b/application-thank-you-retreat.html
@@ -1,9 +1,10 @@
 ---
 layout: promo
+title: Thank you for applying for the 2026 Greece Retreat
 ---
 
 <section class="p-10p text-center">
-    <h1 class="text-lg-serif text-feature">Thank You</h1>
+    <h1 class="text-lg-serif text-feature">Thank You For Applying</h1>
     <div class="w-[80%] mx-auto">
         <p>Thank you for your interest in joining the Liberation Through Movement Retreat in Pelion, Greece! Please find a quiet moment to carefully complete this application. Once successfully completed, you will receive an email invitation to book your 30-minute Connection Call with Mana.</p>
         <a class="button mt-4" target="_blank" href="https://www.canva.com/design/DAFcBGk7o0g/FwupzMTPTfhKB7Xm0hKr6w/view?utm_content=DAFcBGk7o0g&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0635264eea">Download the Greece Retreat PDF</a>
