--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -9,8 +9,8 @@ heading:
   subtitle: Personal Embodiment & Facilitation Program
   description_html: 
   button-enroll:
-    text: Apply Now
-    url: /mentorship-application.html
+    text: Join the Waitlist
+    url: /mentorship-waitlist.html
   button-video:
     show: true
     type: youtube
@@ -134,8 +134,8 @@ investment:
       heading: Payment plan
       price: $950 x 4 months
   button: 
-    url: /mentorship-application.html
-    text: Apply Now
+    url: /mentorship-waitlist.html
+    text: Join the Waitlist
   border: 
 faq:
   heading: Frequently asked questions
@@ -193,10 +193,10 @@ faq:
     image_focus: bottom right
 cta:
   heading: Think this may be the perfect fit for you? 
-  description_html: The next step is to apply!
+  description_html: The next step is to join the waitlist!
   button:
-    text: Apply Now
-    url: /mentorship-application.html
+    text: Join the Waitlist
+    url: /mentorship-waitlist.html
   background-image:
     background_image: /uploads/images/manamei-64.jpg
     background-position: bottom
